k8s/book-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-gateway
  template:
    metadata:
      labels:
        app: book-gateway
    spec:
      containers:
      - name: gateway
        image: huynhngochuyhoang/book-gateway
        livenessProbe:
          httpGet:
            path: "/actuator/health/liveness"
            port: 8080
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: "/actuator/health/readiness"
            port: 8080
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: book-gateway
spec:
  selector:
    app: book-gateway
  ports:
  - port: 8080
    targetPort: 8080
