k8s/book-order.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order
        image: huynhngochuyhoang/order-service
        livenessProbe:
          httpGet:
            path: "/actuator/health/liveness"
            port: 8083
          failureThreshold: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: "/actuator/health/readiness"
            port: 8083
          failureThreshold: 3
          periodSeconds: 3
        ports:
        - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order-service
  ports:
  - port: 8083
    targetPort: 8083
