k8s/book-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-service
  template:
    metadata:
      labels:
        app: book-service
    spec:
      containers:
      - name: book
        image: huynhngochuyhoang/book-service
        livenessProbe:
          httpGet:
            path: "/actuator/health/liveness"
            port: 8082
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: "/actuator/health/readiness"
            port: 8082
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: book-service
spec:
  selector:
    app: book-service
  ports:
  - port: 8082
    targetPort: 8082
