k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
  labels:
    name: book-ingress
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/?(.*)"
          backend:
            service:
              name: client
              port: 
                number: 4200
        - pathType: Prefix
          path: "/api/?(.*)"
          backend:
            service:
              name: book-gateway
              port: 
                number: 8080
